--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mssql": "^10.0.1",
-    "nodemon": "^3.0.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.2",
+    "nodemon": "^3.0.1",
+    "tedious": "^16.6.0"
   },
   "repository": {
     "type": "git",
